Menu Customizer: fix collapsed menu control spacing selector.
git-svn-id: http://plugins.svn.wordpress.org/menu-customizer/trunk@944993 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/menu-customizer.css
+++ b/menu-customizer.css
@@ -721,7 +721,7 @@ body.adding-menu-items #customize-preview {
 		position: relative;
 		z-index: 1;
 	}
-	.customize-control-menu {
+	.customize-control-nav_menu {
 		margin-top: 12px;
 	}
 	.customize-control input.menu-name-field {
